--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: trace_buddy
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +59,7 @@ dependencies:
   cloud_functions: ^4.7.6
   firebase_storage: ^11.7.7
   permission_handler: ^11.3.1
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +77,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -87,6 +86,7 @@ flutter:
   assets:
     - assets/images/
     - assets/vectors/
+    - assets/tflite_models/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
